(update) added all material thus far

--- a/content/02-ch.md
+++ b/content/02-ch.md
@@ -1,12 +1,13 @@
 #  application layer overview
 
-###  principles of network applications
-###  web and http
-###  e-mail, smtp, imap
-###  the domain name system dns
-###  p2p applications
-###  video streaming and content distribution networks
-###  socket programming with udp and tcp
+**topics include**
+-  principles of network applications
+-  web and http
+-  e-mail, smtp, imap
+-  the domain name system dns
+-  p2p applications
+-  video streaming and content distribution networks
+-  socket programming with udp and tcp
 
 ###  application layer:  overview
 
@@ -23,7 +24,7 @@
     +  cdns - content delivery network services
 
 -  programming network applications
-    +  scoket api
+    +  socket api
 
 ###  some network apps
 
@@ -164,19 +165,41 @@
 ###  internet transport protocol services
 
 **tcp service**
--
--
--
--
--
+-  **reliale** transport between sending and receiving process
+-  **flow control**:  sender won't overwhelm receiver
+-  **congestion control**:  throttle sender when the network is overloaded
+-  **connection-oriented**:  setup required between client and server processes
+-  **does not provide**: timing, minimum throughput guarantee, security
 
 **udp service**
--
--
+-  **unreliable data transfer** between sending and receiving process
+-  **does not provide**: reliability, flow control, congestion control, timing, throughput guarantee, security, or connection setup
 
 ###  internet applications, and transport protocols
 
+| application           | application layer protocol | transport protocol |
+|:----------------------|:---------------------------|:-------------------|
+| file transfer/download| ftp                        | tcp                |
+| e-mail                | smtp                       | tcp                |
+| web documents         | http                       | tcp                |
+| internet telephony    | sip, rtp, or proprietary   | tcp or udp         |
+| streaming audio/video | http, dash                 | tcp                |
+| interactive games     | wow, fps, proprietary      | udp or tcp         |
+
 ###  securing tcp
+
+**vanilla tcp & udp sockets**
+-  no encryption
+-  cleartext password sent into socket traverse internet in cleartext
+
+**transport layer security tls**
+-  provides encrypted tcp connections
+-  data integrity
+-  end-point authentication
+
+**tls implemented in application layer**
+-  apps use tls libraries, that use tcp in turn
+-  cleartext sent into socket traverse internet encrypted
 
 ### web and http
 
@@ -242,7 +265,28 @@ downloading multiple objects request multiple connections
 
 ###  non-persistent http: resonse time
 
+**rtt**
+-  time for a small packet to travel from client to server and back
+
+**http response time per object**
+-  one rtt to initiate tcp connection
+-  one rtt for http request and first few bytes of http response to return 
+-  object/file transmission time
+
+non-persistent http response = 2rtt + file transmission time
+
 ###  persistent http
+
+**non-persistent http issues**
+-  requires 2 rtts per object
+-  os overhead for each tcp connection
+-  browsers often open multiple parallel tcp connections to fetch referenced objects in parallel
+
+**persistent http**
+-  server leaves connection open after sending response
+-  subsequent http messages between same client/server sent over open connection
+-  client sends requests as soon as it encounters a referenced object
+-  as little as one rtt for all the referenced objects cutting the response time in half
 
 ###  http request message
 
@@ -318,9 +362,69 @@ header field name | | value | cr | if |
 
 ###  other http request messages
 
+**`POST` method**
+-  web page often includes form input
+-  user input sent from client to server in entity body of `HTTP` `POST` request message
+
+**`GET` method**
+-  for sending data to server
+-  include data in url field of `HTTP GET` request message following a `?`
+-  `www.somesite.com/animalsearch?monkey&banana`
+
+**`HEAD` method**
+-  requests headers only that would be returned if specified url were requested with an `HTTP GET` method
+
+**`PUT` method**
+-  uploads new file (object) to server
+-  completely replaces file that exists at specified url with conent in entity body of `POST HTTP` request method
+
 ### http response message
 
+```HTTP
+HTTP/1.1200 OK
+Date: Tue, 08 Sep 2020 00:53:20 GMP
+Server: Apache/2.4.6 (CentOS) OpenSSL/1.0.2k-fips
+    PHP/7.4.9 mod_perl/2.0.11 Perl/v5.16.3
+Last-Modified: Tue, 01 Mar 2016 18:57:50 GMT
+ETag: "a5b-52d015789ee9e"
+Accept-Ranges: bytes
+Content-Length: 2651
+Content-Type: text/html; charset=UTF-8
+\r\n
+data data data data data ...
+```
+
+status line (protocol status code status phrase)
+`HTTP/1.1 200 OK`
+
+**header lines**
+```HTTP
+Date: Tue, 08 Sep 2020 00:53:20 GMP
+Server: Apache/2.4.6 (CentOS) OpenSSL/1.0.2k-fips
+    PHP/7.4.9 mod_perl/2.0.11 Perl/v5.16.3
+Last-Modified: Tue, 01 Mar 2016 18:57:50 GMT
+ETag: "a5b-52d015789ee9e"
+Accept-Ranges: bytes
+Content-Length: 2651
+Content-Type: text/html; charset=UTF-8
+\r\n
+data data data data data ...
+```
+
+**data, e.g., requested HTML file**
+```
+...
+```
+
+
 ### http response status codes
+
+status code appears in 1st line in server-to-client response message
+-  **200 OK** request succeeded, requested object later in this message
+-  **301 moved permanently** requested object moved, new location specified later in this message in location: field
+-  **400 bad request** request message not understood by server
+-  **404 not found** requested document not found on this server
+-  **505 http version not supported**
 
 ###  maintaining user/server state: cookies
 
@@ -332,8 +436,6 @@ websites and client browser use **cookies** to maintain some state between trans
 2.  cookie header line in next http request message
 3.  cookie file kept on user's host, managed by user's browser
 4.  back-end database at web site
-
-###  maintaining user/server state:  cookies
 
 ###  http cookies:  comments
 
@@ -422,8 +524,6 @@ third party tracking via cookies:
     + 2 sec + milliseconds + u secs
 
 cost: faster access link is expensive
-
-###  option 2: install web cache
 
 ### calculating access link utilization, end-end delay with cache
 
