june 12th lecture 1/2 finished

--- a/content/02-ch.md
+++ b/content/02-ch.md
@@ -558,3 +558,231 @@ lower average end-end delay than with 154 mbps link and cheaper too!
 -  **server**:  response contains no object if browser-cached copy is up to date 
 
 `HTTP/1.0 304 Not Modified`
+
+###  http/2
+
+**key goal**:  decreased delay in multi-object http requets
+
+**http1.1**:  introduced multiple, piplined **GETS** over single tcp connection
+-  server responds in order (fcfs: first come first served scheduling) to `GET` requests
+-  with fcfs, small object may have to wait for transmission (head-of-line (HOL) blocking) behind large objects
+-  loss recovery (retransmitting lost tcp segments) stalls object transmission
+
+###  http/2
+
+**key goal**:  decreased delay in multi-obecjt http requests
+
+**http/2**:  increased flexibility at server in sending objects to clients
+-  methods, status codes, most header fields unchanged from http 1.1
+-  transmission order requested objects based on client-specified object priority 
+-  push unrequested objects to client
+-  divide objects into frames, schedule frames to mitigate hol blocking
+
+###  http/2:  mitigating hol blocking
+
+http 1.1:  client requests 1 large object (e.g. video file) and 3 smaller objects
+-  objects delivered in order requested: $O_2, O_3, O_4$ wait behind $O_1$
+
+http 2: objects divided into frames, frame transmission is interleaved
+-  objects $O_2, O_3, O_4$ delivered quickly, $O_1$ slightly delayed
+
+###  http/2 to http/3
+
+http/2 over tcp connection means
+-  recovery from packet loss still stalls all object transmissions 
+    +  as in http 1.1, browsers have incentive to open multiple parallel tcp connections to reduce stalling, increase overall throughput
+-  no security over vanilla tcp connection
+-  http/3:  adds security, per object error and congestion control (more pipelining) over udp
+
+###  e-mail
+
+**three major components**
+-  user agents
+-  mail servers
+-  simple mail transfer protocol:  smtp
+
+**user agent**
+-  aka mail reader
+-  composing, editing, reading mail messages
+-  e.g. outlook, iphone mail client
+-  outgoing, incoming messages stored on server
+
+**mail servers**
+-  **mailbox** contains incoming messages for user
+-  **message queue** of outgoing to be sent mail messages
+
+**smtp protocol** between mail servers to send email messages
+-  **client**:  sending mail server
+-  **server** :  receiving mail server
+
+###  scenario:  alice sends email to bob
+
+1.  alice uses userger agent to compose an email message to bob
+2.  alice's user agent sends message to her mail server using smtp; message is placed in a message queue
+3.  client side of smtp at mail server opens tcp connection with bob's mail server
+4.  smtp client sends alice's message over the tcp connection
+5.  bob's mail server places the message in bob's mailbox
+6.  bob invokes his user agent to read the message
+
+###  smtp rfc
+
+-  uses tcp to reliably transfer a email message from client (mail server is initiating connection) to sever, port 45
+    +  direct transfer: sending server acting like a client to receiving server
+-  three phases of transfer
+    +  smtp handshaking 
+    +  smtp transfer of messages
+    +  smtp closure
+-  command/response interaction (like http)
+    +  commands:  ascii text
+    +  response:  status code and phrase
+
+```
+client <-----------------------------------> server
+client <-initate tcp connection -----------> server
+client <-----------tcp connected initiated-> server
+client <--------------220------------------> server
+client <--------------HELO------------------> server
+client <--------------250 hello-------------> server
+client <------smtp transfer-----------------> server
+```
+
+###  sample smtp interaction
+
+```
+S: 220 hamburger.edu
+C: HELO crepes.fr
+S: 250 Hello crepes.fr, pleased to meet you
+C: MAIL FROM: <alice@crepes.fr>
+S: 250 alice@crepes.fr... Sender ok
+C: RCPT TO: <bob@hamburger.edu>
+S: 250 bob@hamburger.edu ... Recipient ok
+C: DATA
+S: 354 Enter mail, end with "." on a line by itself
+C: Do you like ketchup?
+C: How about pickles?
+C: .
+S: 250 Message accepted for delivery
+C: QUIT
+S: 221 hamburger.edu closing connection
+```
+
+###  smtp:  observations
+
+**comparison with http**
+-  http:  client pull, meaning you're pulling a file from a server
+-  smtp:  client push, meaning you're pushing a file from a server
+-  both have ascii command/response interaction, status codes
+-  http:  each object encapsulated in its own response message
+-  smtp:  multiple objects sent in multipart message
+-  smtp uses persistent connections
+-  smtp requires message (header & body) to be in 7-bit ascii
+-  smtp server uses crlf.crlf (new line feed) to determine end of message
+
+###  mail message format
+
+**smtp**:  protocol for exchanging email messages, defined in rfc 5321 (like rfc 7231 defines http)
+
+**rfc 2822**  defines syntax for an email message itself like html defines syntax for web documents
+
+```
+header lines
+-  to
+-  from
+-  subject
+-  body
+```
+
+###  retrieving email:  mail access protocols
+
+-  **smtp**:  delivery storage of email messages to receiver's server
+-  mail access protocol:  retrieval from server
+    +  **imap**:  internet mail access protocol:  messages stored on server, impa provides retrieval, deletion, folders of stored messages on server
+-  **http**:  gmail, hotmail, yahoo mail, etc. provides web-based interface on top of smtp to send, imap or pop to retrieve email messages
+
+
+###  dns:  domain name system
+
+**internet hosts, routers**
+-  ip address (32 bit) used for addressing datagrams
+-  name, e.g. `www.wichita.edu` used by humans
+
+**domain name system dns**
+-  distributed database implemented in hierarchy of many name server
+-  application layer protocol:  hosts, dns servers communicate to resolve names (address/ name translation)
+    +  note:  core internet function, implemented as application layer protocol
+    +  complexity at network's edge
+
+question:  how does one map between ip address and name, and vice versa?
+
+###  dns:  services, structure
+
+**dns services**
+-  hostname to ip address translation
+-  host aliasing
+    +  canonical alias names
+-  mail server aliasing
+-  load distribution
+    +  relicated web servers:  many ip addresses correspond to one name
+
+question:  why not centralize dns?
+-  single point of failure
+-  traffic volume
+-  distant centralized database
+-  maintenance
+
+answer:  it doesnt scale
+-  comcast dns servers alone: 600 billion dns queries/day
+-  akamai dns serves alone: 2.2 trillion dns queries/day
+
+###  dns:  a distributed, hierarchial database
+
+```
+                  root dns servers
+              /           |           \
+        .com servers  .org servers  .edu servers      
+          /   \              \           /   \
+    yahoo.com  amazon.com    pbs.org  nyu.edu  umass.edu
+```
+
+client wants ip address for `www.amazon.com` 1st approximation
+-  client queries root server to find `.com` dns server
+-  client queries `.com` dns server to get `amazon.com` dns server
+-  client queries `amazon.com` dns server to get ip address for `www.amazon.com`
+
+###  dns:  root name servers
+-  official, contact-of-last-resort by name servers that can not resolve name
+-  incredibly important internet function
+    +  internet couldn't function without it
+    +  dnssec - provides security authentication, message integrity
+-  icann internet corporation for assigned names and numbers manages root dns domain
+-  13 logical root name servers worldwide each server replicated many time 200 servers in us
+
+###  top level domain and authoritative servers
+
+**top level domain tld servers**
+-  responsible for `.com`, `.net`, `.edu`, `.aero`, `.museumes`, and all top level country domains, e.g. `.cn`, `.uk`
+-  network solutions: authoritative registry for `.com`, `.net` tld
+
+###  dns records
+
+**dns** distributed database storing resource records (rr) 
+-  rr fromat: `(name, value, type, ttl)`
+
+**type=A**
+-  `name` is hostname
+-  `value` is ip address
+
+**type=NS**
+-  `name` is domain (e.g. foo.com)
+-  `value` is hostname of authoritative name server for this domain
+
+**type=CNAME**
+-  `name` is alias name for some canonical real name
+-  www.ibm is really servereast.backup2.ibm.com
+-  `value` is canonical name
+
+**type=MX**
+-  `value` is name of smtp mail server associated with `name`
+
+###  dns protocol messages
+
