(update) lecture on june 14

--- a/content/02-ch.md
+++ b/content/02-ch.md
@@ -786,3 +786,180 @@ client wants ip address for `www.amazon.com` 1st approximation
 
 ###  dns protocol messages
 
+###  multimedia:  video
+
+-  **cbr constant bit rate**:  video encoding rate is fixed
+-  **vbr variable bit rate**:  video encoding rate changes as amount of spatial, temporal coding ranges
+-  examples of standards:  include mpeg1, mpeg2, meg4
+    +  mpeg1 (cd-rom) 1.5 mbps
+    +  mpeg2 (dvd) 3-6 mbps
+    +  mpeg4 (often used in internet) 64 kbps 12 mbps
+
+###  streaming stored video
+
+main challenges:
+-  include server to client bandwidth will vary over time, with changing network congestion levels in house, access network, network code, video server
+-  packet loss, delay due to congestion will delay playout, or result in poor video quality
+
+steps involves:
+1.  video recorded (e.g. 30 frames/sec)
+2.  video sent (network delay occured and is fixed)
+3.  video received, played out at client (30 frames/sec)
+
+**streaming**:  at this time, client playing out early part of a video, while the server is still sending later part of the video.
+
+###  streaming stored video:  challenges
+
+-  **continuous playout constraint**:  during client video playout, playout timing must match original timing.
+    +  but **network delays are variable**, so there will need to be a client-side buffer to match continuous playout constraint
+-  other challenges:
+    +  client interactivity:  pause, fast-forward, rewind, jump through video
+    +  video packets may be lost, or retransmitted
+
+###  streaming stored video:  playout buffering
+
+-  **client side buffering and platout delay**:  compensate for network added delay, delay jitter
+
+<img src="./playout.png">
+
+###  streaming multimedia:  dash
+
+**dash  dynamic, adaptive streaming over http**
+
+**server**
+-  divides video file into multiple chunks
+-  each chunk is encoded at multiple different rates
+-  different rate encodings stored in different files
+-  files are replicated in various cdn (content distribution networks) nodes
+-  **manifest file** provides urls for different chunks, where a certain chuck is defined what timestamp it's located
+
+**client**
+-  periodically estimates server to client bandwidth
+-  consulting manifest, requests one chunk at a time
+    +  chooses maximum coding rate sustainable given current bandwidth
+    +  can choose different coding rates at different points in time (depending on available bandwidth at time), and from different servers
+-  **intelligence at client** clients determines
+    +  **when** to request a chunk (so that buffer starvation, or overflow does not occur)
+    +  **what encoding rate** to request (higher quality when more bandwidth is available)
+    +  **where** to request a chunk (can request from url server that is close to client or has high available bandwidth)
+
+**streaming video** = encoding + dash + playout buffering
+
+###  content distribution networks cdns
+
+**challenge**:  how to stream content (selected from millions of videos) to hundreds of thousands of simultaneous users?
+
+-  **option 1**:  single, large "mega server"... doesnt scale
+    +  single point of failure
+    +  point of network congestion
+    +  long and possibly congested path to distant clients
+
+-  **option 2**:  store/serve multiple copies of videos at multiple geographically distributed sites (cdn)
+    +  enter deep:  push cdn servers deep into many access networks.  where it's close to users.  akamani is an example of 240,000 servers deployed in > 120 countries
+    +  bring home:  smaller number (10s) of larger clusters in pop's near access nets used by limelight.
+
+###  how does netflix work?
+
+-  netflix: stores copies of content at its worldwide openconnect cdn nodes
+-  subscriber requests content, service provider returns manifest 
+    +  using manifest, client retrieves content at highest supportable rate
+    +  may choose different rate or copy if network path is congested
+
+###  content distribution networks (cdns)
+
+-  **ott** over the top of internet host to host communication as a service
+-  **ott challenges**:  coping with a congested internet from the edge
+    +  what content to play in which cdn node?
+    +  from which cdn node to retrieve content? at which rate?
+
+###  socket programming
+
+**goal**:  learn how to build client/server applications that communicate using sockets
+
+**socket**:  door between application process and end-end transport protocol.
+
+<img src="./socket.png">
+
+**two socket types for two transport services**
+-  **udp user datagram protocol**:  unreliable datagram
+-  **tcp transmission control protocol**:  reliable, byte stream-oriented
+
+**application example**:
+1.  client reads a line of characters (data) from its keyboard and sends data to server
+2.  server receives the data and converts characters to uppercase
+3.  server sends modified data to client
+4.  client receives modified data and displays line on its screen
+
+###  socket programming with udp
+
+**udp**:  no connection between client and server
+-  no handshaking before sending data
+-  sender explicitly attaches ip destination address and port # to each packet
+-  receiver extracts sender ip address and port # from received packet
+
+**udp**:  transmitted data may be lost or received out of order
+**application viewpoint**:  udp provides unreliable transfer of groups of bytes ("datagram") between client and server processes
+
+<img src="./udp.png">
+
+###  example app:  udp client
+
+```python
+#  include python's socket library
+from socket import *
+serverName = 'hostname'
+serverPort = 12000
+
+#  create udp socket
+clientSocket = socket(AF_INET, SOCK_DGRAM)
+
+#  get user keyboard input
+message = input('Input lowercase sentence:')
+
+#  attach server name, port to message; sent into socket
+clientSocket.sendto(message.encode(), (serverName, serverPort))
+
+#  read reply data (bytes) from socket
+modifiedMessage, serverAddress = clientSocket.recvfrom(2048)
+
+#  print out received string and close socket
+print(modifiedMessage.decode())
+
+client.Socket.close()
+```
+
+###  example app udp server
+
+```python
+from socket import *
+serverPort = 12000
+
+#  create udp socket
+serverSocket = socket(AF_INET, SOCK_DGRAM)
+
+#  bind socket to local port number 12000
+serverSocket.bind(("", serverPort))
+
+print('The server is ready to receive')
+
+#  loop forever
+while True:
+    message, clientAddress = serverSocket.recvfrom(2048)
+    modifiedMessage = message.decode().upper()
+    serverSocket.sendto(modifiedMessage.encode(), clientAddress)
+```
+
+###  socket programming with tcp
+
+**client must contact server**
+-  server process must first be running
+-  server must have created socket that welcomes client's contact
+
+**client contacts server by**
+-  creating tcp socket, specifying ip address, port number of server process
+-  **when client creates socket**:  client tcp establishes connection to server tcp
+
+-  when contacted by client, **server tcp creates a new socket** for the server process to communicate with that particular client
+    +  allows server to talk with multiple clients
+    +  client source port # and ip address used to distinguish clients
+
