(update) and added final info

--- a/study-sets/01-ch.md
+++ b/study-sets/01-ch.md
@@ -5,7 +5,7 @@
 -  the internet is a network of networks and interconnected internet service providers isp
 -  made up of protocols which control sending and receiving of messages
 -  http, tcp, ip, wifi, 4/5g, and ethernet
--  internet standards such as requests of comments rfc and internet engineering task ietf
+-  internet standards such as requests of comments rfc and internet engineering task force ietf
 
 2.  what is the internet from a services view
 
