(update) updated course materials for june 17

--- a/content/02-ch.md
+++ b/content/02-ch.md
@@ -16,7 +16,7 @@
     +  client server paradigm
     +  peer to peer paradigm
 
--  learn about protocols by examining popular application layer ptotocols and infrastructure
+-  learn about protocols by examining popular application layer protocols and infrastructure
     +  http -  hyper text transfer protocol
     +  smtp -  simple mail transfer protocol
     +  imap -  internet message access protocol
